err/products.managableindex.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/ManagableIndex'...
Compiling './lib/python3.5/site-packages/Products/ManagableIndex/PathIndex.py'...
***   File "./lib/python3.5/site-packages/Products/ManagableIndex/PathIndex.py", line 69
    def _insert(self, (pos, seg), docId):
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/ManagableIndex/RangeIndex.py'...
***   File "./lib/python3.5/site-packages/Products/ManagableIndex/RangeIndex.py", line 237
    return lambda (low,high), t=term: low <= t <= high
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/ManagableIndex/doc'...
Compiling './lib/python3.5/site-packages/Products/ManagableIndex/fixPluginIndexes.py'...
***   File "./lib/python3.5/site-packages/Products/ManagableIndex/fixPluginIndexes.py", line 49
    raise self.ParserException, (
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/ManagableIndex/tests'...
Listing './lib/python3.5/site-packages/Products/ManagableIndex/zpt'...
Listing './lib/python3.5/site-packages/Products/OFolder'...
Listing './lib/python3.5/site-packages/Products/OFolder/dtml'...
Listing './lib/python3.5/site-packages/Products/OFolder/www'...
Listing './lib/python3.5/site-packages/Products.ManagableIndex-2.1.5.egg-info'...
Listing './lib/python3.5/site-packages/Products.OFolder-2.0.1.egg-info'...
Listing './lib/python3.5/site-packages/dm'...
Listing './lib/python3.5/site-packages/dm/reuse'...
Listing './lib/python3.5/site-packages/dm.reuse-1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
